Update Segmenting and Clustering Neighborhoods in Toronto.ipynb

--- a/Segmenting and Clustering Neighborhoods in Toronto.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto.ipynb
@@ -23,8 +23,8 @@
     }
    ],
    "source": [
-    "! pip install beautifulsoup4\n",
-    "! pip3 install lxml\n"
+    "#! pip install beautifulsoup4\n",
+    "#! pip3 install lxml\n"
    ]
   },
   {
@@ -50,10 +50,6 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "#import matplotlib.pyplot as plt\n",
-    "#from unicodedata import normalize\n",
-    "#from lxml import *\n",
     "\n",
     "#get the page\n",
     "URL='https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M'\n"
