--- a/Neighborhoods_in_the_city_of_Toronto.ipynb
+++ b/Neighborhoods_in_the_city_of_Toronto.ipynb
@@ -817,9 +817,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'QEF4SFROUUVOQKNPAFNNRDUW4ACAWSYYG312LM3BKEDDKPIZ' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'CCBFW1WDVTUYDLPFX3SR0QBB5R2UKRYOZ3F1JDJ3PLQMPDRM' # your Foursquare Secret\n",
-    "VERSION = '20180604'"
+    "CLIENT_ID = 'XXX' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'XXX' # your Foursquare Secret\n"
+    
    ]
   },
   {
